// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge / default large-light-en 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#424242",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#EEEEEE",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / default small-light-en 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#424242",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#EEEEEE",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / default standard-dark-en 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#EEEEEE",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#383838",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / default standard-light-ar 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#424242",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#EEEEEE",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / default standard-light-en 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#424242",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#EEEEEE",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / default standard-light-fr 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#424242",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#EEEEEE",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / error large-light-en 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#FFFFFF",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#D32F2F",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / error small-light-en 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#FFFFFF",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#D32F2F",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / error standard-dark-en 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#FFFFFF",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#E57373",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / error standard-light-ar 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#FFFFFF",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#D32F2F",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / error standard-light-en 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#FFFFFF",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#D32F2F",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / error standard-light-fr 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#FFFFFF",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#D32F2F",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / success large-light-en 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#FFFFFF",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#2E7D32",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / success small-light-en 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#FFFFFF",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#2E7D32",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / success standard-dark-en 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#FFFFFF",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#81C784",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / success standard-light-ar 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#FFFFFF",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#2E7D32",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / success standard-light-en 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#FFFFFF",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#2E7D32",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Badge / success standard-light-fr 1`] = `
{
  "View[0]/Text[0]": {
    "color": "#FFFFFF",
    "fontSize": 12,
    "fontWeight": "600",
    "letterSpacing": 0.5,
    "lineHeight": 14.399999999999999,
    "textAlign": "left",
  },
  "badge": {
    "backgroundColor": "#2E7D32",
    "borderRadius": 9999,
    "flexDirection": "row",
    "minHeight": 24,
    "paddingHorizontal": 16,
    "paddingVertical": 8,
  },
}
`;

exports[`Card / default large-light-en 1`] = `
{
  "card": {
    "backgroundColor": "#FAFAFA",
    "borderRadius": 8,
    "borderWidth": 0,
    "padding": 16,
  },
}
`;

exports[`Card / default small-light-en 1`] = `
{
  "card": {
    "backgroundColor": "#FAFAFA",
    "borderRadius": 8,
    "borderWidth": 0,
    "padding": 16,
  },
}
`;

exports[`Card / default standard-dark-en 1`] = `
{
  "card": {
    "backgroundColor": "#1E1E1E",
    "borderRadius": 8,
    "borderWidth": 0,
    "padding": 16,
  },
}
`;

exports[`Card / default standard-light-ar 1`] = `
{
  "card": {
    "backgroundColor": "#FAFAFA",
    "borderRadius": 8,
    "borderWidth": 0,
    "padding": 16,
  },
}
`;

exports[`Card / default standard-light-en 1`] = `
{
  "card": {
    "backgroundColor": "#FAFAFA",
    "borderRadius": 8,
    "borderWidth": 0,
    "padding": 16,
  },
}
`;

exports[`Card / default standard-light-fr 1`] = `
{
  "card": {
    "backgroundColor": "#FAFAFA",
    "borderRadius": 8,
    "borderWidth": 0,
    "padding": 16,
  },
}
`;

exports[`Card / elevated large-light-en 1`] = `
{
  "card": {
    "backgroundColor": "#FAFAFA",
    "borderRadius": 8,
    "borderWidth": 0,
    "padding": 16,
  },
}
`;

exports[`Card / elevated small-light-en 1`] = `
{
  "card": {
    "backgroundColor": "#FAFAFA",
    "borderRadius": 8,
    "borderWidth": 0,
    "padding": 16,
  },
}
`;

exports[`Card / elevated standard-dark-en 1`] = `
{
  "card": {
    "backgroundColor": "#1E1E1E",
    "borderRadius": 8,
    "borderWidth": 0,
    "padding": 16,
  },
}
`;

exports[`Card / elevated standard-light-ar 1`] = `
{
  "card": {
    "backgroundColor": "#FAFAFA",
    "borderRadius": 8,
    "borderWidth": 0,
    "padding": 16,
  },
}
`;

exports[`Card / elevated standard-light-en 1`] = `
{
  "card": {
    "backgroundColor": "#FAFAFA",
    "borderRadius": 8,
    "borderWidth": 0,
    "padding": 16,
  },
}
`;

exports[`Card / elevated standard-light-fr 1`] = `
{
  "card": {
    "backgroundColor": "#FAFAFA",
    "borderRadius": 8,
    "borderWidth": 0,
    "padding": 16,
  },
}
`;

exports[`Input / default large-light-en 1`] = `
{
  "View[0]/View[0]": {
    "backgroundColor": "#FFFFFF",
    "borderColor": "#E0E0E0",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#757575",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input / default small-light-en 1`] = `
{
  "View[0]/View[0]": {
    "backgroundColor": "#FFFFFF",
    "borderColor": "#E0E0E0",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#757575",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input / default standard-dark-en 1`] = `
{
  "View[0]/View[0]": {
    "backgroundColor": "#FFFFFF",
    "borderColor": "#757575",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input / default standard-light-ar 1`] = `
{
  "View[0]/View[0]": {
    "backgroundColor": "#FFFFFF",
    "borderColor": "#E0E0E0",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#757575",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input / default standard-light-en 1`] = `
{
  "View[0]/View[0]": {
    "backgroundColor": "#FFFFFF",
    "borderColor": "#E0E0E0",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#757575",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input / default standard-light-fr 1`] = `
{
  "View[0]/View[0]": {
    "backgroundColor": "#FFFFFF",
    "borderColor": "#E0E0E0",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#757575",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input / error large-light-en 1`] = `
{
  "View[0]/Text[1]": {
    "color": "#D32F2F",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "backgroundColor": "#FFFFFF",
    "borderColor": "#D32F2F",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#757575",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input / error small-light-en 1`] = `
{
  "View[0]/Text[1]": {
    "color": "#D32F2F",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "backgroundColor": "#FFFFFF",
    "borderColor": "#D32F2F",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#757575",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input / error standard-dark-en 1`] = `
{
  "View[0]/Text[1]": {
    "color": "#E57373",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "backgroundColor": "#FFFFFF",
    "borderColor": "#E57373",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#BDBDBD",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input / error standard-light-ar 1`] = `
{
  "View[0]/Text[1]": {
    "color": "#D32F2F",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "backgroundColor": "#FFFFFF",
    "borderColor": "#D32F2F",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#757575",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input / error standard-light-en 1`] = `
{
  "View[0]/Text[1]": {
    "color": "#D32F2F",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "backgroundColor": "#FFFFFF",
    "borderColor": "#D32F2F",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#757575",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;

exports[`Input / error standard-light-fr 1`] = `
{
  "View[0]/Text[1]": {
    "color": "#D32F2F",
    "fontSize": 10,
    "fontWeight": "400",
    "letterSpacing": 0,
    "lineHeight": 18,
    "marginTop": 4,
    "textAlign": "left",
  },
  "View[0]/View[0]": {
    "backgroundColor": "#FFFFFF",
    "borderColor": "#D32F2F",
    "borderRadius": 8,
    "borderWidth": 1,
    "flexDirection": "row",
    "height": 44,
    "paddingEnd": 16,
    "paddingStart": 16,
    "paddingVertical": 0,
  },
  "input": {
    "@placeholderTextColor": "#757575",
    "color": "#212121",
    "fontSize": 14,
    "fontWeight": "400",
    "height": "100%",
    "lineHeight": 21,
    "margin": 0,
    "minWidth": 0,
    "paddingHorizontal": 0,
    "paddingVertical": 0,
  },
}
`;
